--- a/countdown.html
+++ b/countdown.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body> 
+    <div class="header">
+         <h1>COUNTDOWN TO MY BIRTHDAY</h1>
     <div id="birthday">
-        <h1>COUNTDOWN TO MY BIRTHDAY</h1>
+       
+         <script type="text/javascript" src="countdown.js"></script>
     </div>
-    <script type="text/javascript" src="countdown.js"></script>
+   </div>
 </body>
 </html>
